# flp_todo

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yaml  pyproject.toml  settings.toml
data/: README.md
data/0_external/: README.md
data/0_raw/: README.md
data/1_interim/: README.md
data/2_final/: README.md
docs/: reference.md
notebooks/: README.md
notebooks/data/: README.md
reports/data/: README.md
src/: README.md  process.py
src/process/: __init__.py  etl.py
tests/: test_config.py  test_etl.py  test_sample.py
