[tool.poetry]
name = "flp_nse"
version = "0.1.0"
description = "bi project nse"
authors = ["François Lefebvre <flefebvre01@hotmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/FrankLef/flp_nse.git"
repository = "https://github.com/FrankLef/flp_nse.git"
documentation = "https://flp_nse.readthedocs.io"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.poetry.urls]
Changelog = "https://github.com/FrankLef/flp_nse.git/releases"

[tool.poetry.dependencies]
python = "^3.10.6"
typer = "^0.6.1"
requests = "^2.28.1"
prefect = "^2.4.5"
pandas = "^1.5.0"
numpy = "^1.23.3"
pyodbc = "^4.0.34"
SQLAlchemy = "^1.4.41"
sqlalchemy-access = "^1.1.3"
# Use pyarrow.feather instead of feather-format,
# feather.format exists only fo backward compatibility.
# pyarrow is better installed with `pip3 install pyarrow` in the local python,
# don't install pyarrow with poetry add, plenty of error messages ensue.
pyarrow = "^9.0.0"
dynaconf = "^3.1.11"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
# plug-in to allow flake8 to use pyproject.toml
Flake8-pyproject = "^1.1.0"
pep8-naming = "^0.13.2"
black = "^22.8.0"
pre-commit = "^2.20.0"
pre-commit-hooks = "^4.3.0"
pytest = "^7.1.3"
mypy = "^0.971"
typeguard = "^2.13.3"
mkdocs = "^1.4.0"
mkdocstrings = "^0.19.0"
mkdocs-material = "^8.5.4"
mkdocstrings-python = "^0.7.1"
isort = "^5.10.1"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"

[tool.isort]
profile = "black"

[tool.flake8]
# Flake8-pyproject plug-in must be installed for this
# flake8 keeps issuing error E501 even though all line lengths are fine
# don't forget to also change .pre-commit-config.yaml
ignore = ['E501']
max-line-length = 79  # maximum line length as per PEP-8
count = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
